--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="name-block">
         <p><strong>Ashutosh Joshi</strong><br>
          Mathematics<br>
-        ayannath at mit.edu
+        ssgk4364 at gmail.com
         </p>
       </div>
 
@@ -40,9 +40,8 @@
 
     <div class="content">
       <div id="home">
-          <p>I am an ECE undergrad.
+          <p>I am an ECE undergrad interested in mathematics.
            </p>
-        <p>I am interested in mathematics. </p>
       </div>
 
       <div id="magazine solutions">
@@ -59,29 +58,6 @@
             href="./perfectoid/almost-purity.pdf" target="_blank">[pdf]</a></li>
 <li>Tilting equivalence for perfectoid algebras <a
             href="./perfectoid/tilting-equivalence.pdf" target="_blank">[pdf]</a></li>
-
-    <li>Special cycles on unitary Shimura varieties <a
-            href="./theta-series.pdf" target="_blank">[pdf]</a></li>
-    <li>Hodge-Tate decomposition for abelian varieties with good reduction <a
-            href="./hodge-tate-decomposition.pdf" target="_blank">[pdf]</a></li>
-    <li>Moduli schemes of elliptic curves <a
-            href="./deligne-rapoport.pdf" target="_blank">[pdf]</a></li>
-    <li>Deligne's construction of $\ell$-adic Galois representations attached to normalized cuspidal newforms of weight $k\ge 2$ <a
-            href="./deligne-galois-reps.pdf" target="_blank">[pdf]</a></li>
-    <li>Ribet's converse to Herbrand's theorem <a
-            href="./ribet-herbrand.pdf" target="_blank">[pdf]</a></li>
-    <li>Galois representations attached to modular forms of weight 1 <a
-            href="./deligne-serre.pdf" target="_blank">[pdf]</a></li>
-    <li>Tate uniformization of Drinfeld modules <a href="./tate-uniformization.pdf" target="_blank">[pdf]</a></li>
-    <li>An introduction to the mod $p$ local Langlands correspondence for
-        $\text{GL}_2(\mathbb Q_p)$ <a href="./vsrp-report.pdf" target="_blank">[pdf]</a> <a href="./vsrp-slides.pdf" target="_blank">[slides]</a></li>
-    <li>Alterations <a
-            href="./alterations.pdf" target="_blank">[pdf]</a> <a
-            href="./alterations-slides.pdf" target="_blank">[slides]</a> 
-    </li>
-    <li>The Hochster-Roberts theorem <a href="./hochster-roberts.pdf" target="_blank">[pdf]</a> </li>
-    <li> (old) Olympiad handout on analytic number theory <a href="./olympiad-analytic-nt.pdf"
-            target="_blank">[pdf]</a> <a href="https://artofproblemsolving.com/community/q1h2251201p17343711" target="_blank">[AoPS Page]</a></li>
 </ul>
       </div>
 
@@ -99,7 +75,7 @@
 
     <!--
 <footer style="text-align: center; font-size: 0.8rem; color: var(--muted-color); margin-top: 2rem;">
-  <p>&copy; Ayan Nath | Made by ChatGPT.</p>
+  <p>&copy; Ashutosh Joshi | Made by Ayush Singh Ghatal.</p>
 </footer>
     -->
   </div>
