--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
           <p>I am an ECE undergrad interested in mathematics. </p>
           <a href="https://artofproblemsolving.com/community/user/1013810" target="_blank">
             AoPS</a>
+          <a href="https://math.stackexchange.com/users/1257480/autumn" target="_blank">
+            MSE</a>
       </div>
 
       <div id="magazine solutions">
