--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       <div id="home">
           <p>I am an ECE undergrad interested in mathematics. </p>
           <p><a href="https://artofproblemsolving.com/community/user/1013810" target="_blank">
-            AoPS</a> </p>p
-          <a href="https://math.stackexchange.com/users/1257480/autumn" target="_blank">
-            MSE</a>
+            AoPS</a> </p>
+          <p> <a href="https://math.stackexchange.com/users/1257480/autumn" target="_blank">
+            MSE</a> </p>
       </div>
 
       <div id="magazine solutions">
