--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             AoPS</a> </p>
           <p> <a href="https://math.stackexchange.com/users/1257480/autumn" target="_blank">
             MSE</a> </p>
-        <p>"An unspoken
+        "An unspoken
 consensus told me, both in high school and in university, that there was no need
 to question the notion of “volume”, which was presented as “well-known”, “self-
 evident”, “unproblematic”. Naturally I turned a blind eye to this consensus -
@@ -53,7 +53,7 @@ just as Lebesgue, a few decades earlier, had to turn a blind eye. It is in this
 act of “turning a blind eye”, of being oneself rather than the mere expression
 of the reigning consensus, of not to remain inscribed within the imperative
 circle to which they assign us - it is within this solitary act, above all else, that
-“creation” lies. Everything else comes after." - Alexander Grothendieck</p>
+“creation” lies. Everything else comes after." - Alexander Grothendieck
       </div>
 
       <div id="magazine solutions">
